--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "main": "api/Index.php",
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "api/Index.php"
   },
-  "author": "",
+  "author": "TechTitans",
   "license": "ISC"
 }
+
