--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "dependencies": {
     "bootstrap": "^5.3.2"
   },
-    "name": "tech-titans-red",
-    "version": "1.0.0",
-    "description": "RED",
-    "main": "/index.php",
-    "scripts": {
-      "start": "php /index.php"
-    },
-    "author": "TechTitans",
-    "license": "ISC"
-  }
-  
+  "name": "tech-titans-red",
+  "version": "1.0.0",
+  "description": "RED",
+  "main": "PHP/Vistas/Index.php",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
+}
