--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "name": "tech-titans-red",
   "version": "1.0.0",
   "description": "RED",
-  "main": "PHP/Vistas/Index.php",
+  "main": "/index.php",
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
